refactoring duplicate sonarQube